kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronosai-service
  namespace: chronosai
  labels:
    app: chronosai
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Provisions AWS Network Load Balancer in EKS
spec:
  type: LoadBalancer
  selector:
    app: chronosai
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
